        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12249
        FCKeditor: <hr>, <ul> and <ol> have id="undefined"

        This fixes the attached reduction, but not the original issue.

        Test: editing/execCommand/default-parameters.html

        * dom/Document.h:
        * dom/Document.idl:
        Make second and third execCommand() parameters optional.



Canonical link: https://commits.webkit.org/16907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20101 268f45cc-cd09-0410-ab3c-d52691b4dbfc